# ChangeLog for dev-python/pygobject
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.89 2010/03/19 17:04:42 pacho Exp $

  19 Mar 2010; Pacho Ramos <pacho@gentoo.org> pygobject-2.20.0.ebuild,
  +files/pygobject-2.20.0-tmpdir-makefile.patch:
  Fix bug 299680 with upstream commited patch. Thanks to Kevin Pyle for the
  report and the patch

  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pygobject-2.18.0-r2.ebuild, pygobject-2.20.0.ebuild:
  Don't call python_need_rebuild() (bug #300587).

  29 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  pygobject-2.18.0.ebuild, pygobject-2.18.0-r2.ebuild,
  pygobject-2.20.0.ebuild:
  Fix glib depends in all ebuilds; configure.ac lies, fixes bug 298823

  02 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  pygobject-2.18.0-r2.ebuild, pygobject-2.20.0.ebuild:
  Drop Darwin hack, no longer necessary, thanks Heiko Przybyl, bug #291524

*pygobject-2.20.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -pygobject-2.14.0.ebuild, -pygobject-2.14.2.ebuild,
  -files/pygobject-2.14.2-libffi.patch, -pygobject-2.15.4.ebuild,
  -pygobject-2.16.0.ebuild, -pygobject-2.16.1.ebuild,
  -pygobject-2.16.1-r1.ebuild, +pygobject-2.20.0.ebuild:
  New version for GNOME 2.28. Clean up old revision.

  14 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  pygobject-2.14.2.ebuild, pygobject-2.15.4.ebuild:
  Remove support for gcc's libffi because it's conflicting with
  dev-libs/libffi in ld.so.conf.

  11 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pygobject-2.18.0-r2.ebuild:
  Use correct paths.

  11 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  pygobject-2.18.0-r2.ebuild:
  Merge from Prefix

  21 Sep 2009; Tom Gall <tgall@gentoo.org> pygobject-2.18.0.ebuild:
  stable on ppc64, bug #277947

  07 Sep 2009; Raúl Porcel <armin76@gentoo.org> pygobject-2.18.0.ebuild: